--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@
 
  /* mobile first design */
 .body {
+    min-height: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
 }
@@ -63,13 +65,22 @@
     margin-bottom: 10px;
 }
 
-@media (min-width: 600px) 
+.footer {
+    transform: translateY(100%);
+    width: 100%;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+
+@media (min-width: 900px) 
 {
     .header {
         margin-left: 50px;
         margin-top: 20px;
     }
     .body {
+        position: relative;
         display: flex;
         flex-direction: row;
         justify-content: center;
@@ -80,11 +91,13 @@
         margin-top: 20px;
     }
 
+    .body_info {
+        margin-left: 2em;
+    }
     .body_img {
         width: 45vw;
         height: 55vh;
     }
-
     .body_info_para {
         width: 45%;
     }
@@ -95,5 +108,11 @@
 
     .body_info_button {
         margin-top: 60px;
+    }
+
+    .footer {
+        position:absolute;
+        bottom: 0;
+        font-size: 14px;
     }
 }
